Add tests for `WhisperServerService#run`
Additionally, `LocalWhisperServerService` may be used for integration testing.